<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/page_padding_start"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/page_padding_end">

        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp"
            tools:text="Commit #1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rectangle_grey"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                android:textAlignment="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_author_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/tv_author_name"
                    app:layout_constraintStart_toEndOf="@id/tv_author_name"
                    app:layout_constraintTop_toTopOf="@id/tv_author_name"
                    tools:text="Author Name" />

                <TextView
                    android:id="@+id/tv_author_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@string/email_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_author_name" />

                <TextView
                    android:id="@+id/tv_author_email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/tv_author_email"
                    app:layout_constraintStart_toEndOf="@id/tv_author_email"
                    app:layout_constraintTop_toTopOf="@id/tv_author_email"
                    tools:text="Author Email" />

                <TextView
                    android:id="@+id/tv_author_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@string/date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_author_email" />

                <TextView
                    android:id="@+id/tv_author_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/purple_500"
                    app:layout_constraintStart_toEndOf="@id/tv_author_date"
                    app:layout_constraintTop_toTopOf="@id/tv_author_date"
                    tools:text="22.1.2020." />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/committer_label"
                android:textAlignment="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_committer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_committer_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/tv_committer_name"
                    app:layout_constraintStart_toEndOf="@id/tv_committer_name"
                    app:layout_constraintTop_toTopOf="@id/tv_committer_name"
                    tools:text="Author Name" />

                <TextView
                    android:id="@+id/tv_committer_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@string/email_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_committer_name" />

                <TextView
                    android:id="@+id/tv_committer_email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/tv_committer_email"
                    app:layout_constraintStart_toEndOf="@id/tv_committer_email"
                    app:layout_constraintTop_toTopOf="@id/tv_committer_email"
                    tools:text="Author Email" />

                <TextView
                    android:id="@+id/tv_committer_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@string/date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_committer_email" />

                <TextView
                    android:id="@+id/tv_committer_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/purple_500"
                    app:layout_constraintBottom_toBottomOf="@id/tv_committer_date"
                    app:layout_constraintStart_toEndOf="@id/tv_committer_date"
                    app:layout_constraintTop_toTopOf="@id/tv_committer_date"
                    tools:text="22.1.2020." />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/message_label"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_message_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/black"
                tools:text="Message Message Message Message Message Message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment_count_label" />

                    <TextView
                        android:id="@+id/tv_comment_count_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/purple_500"
                        tools:text="23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verified_label" />

                    <TextView
                        android:id="@+id/tv_verified_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorRed"
                        tools:text="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reason_label" />

                    <TextView
                        android:id="@+id/tv_reason_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/black"
                        tools:text="Unsigned" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/url_label"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_html_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                tools:text="Html url" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>